--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <span class="form-label required-asterisk mt-4 mb-0"><strong>Your Experience</strong></span>
-            <div class="rating mb-4">
+            <div class="rating">
 
                 <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
                 <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
@@ -40,6 +40,7 @@
               </div>
 
 
+              <span class="form-label mb-4"><smal>Overall,how would you rate you Experience with us?</smal></span>
 
             <span for="table" class="form-label required-asterisk"><strong>How Satisfied Are You</strong></span>
             <table class="table table-striped">
